# ap-explanation

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  mkdocs.yml  pyproject.toml  versions.json
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: deploy-docs-on-demand.yml  docker-image.yml  tests.yml
ap_explanation/: di.py  main.py  semirings.py
ap_explanation/errors/: __init__.py  exceptions.py
ap_explanation/internal/: sql_rewriter.py
ap_explanation/repository/: provenance.py
ap_explanation/services/: provenance.py
ap_explanation/types/: pg_json.py
dependencies/postgres-provsql/: Dockerfile
docs/: index.md  mkdocs.yml  modules.md  semiring_formats.md
docs/docs/: architecture.md  configuration.md  development.md  index.md  troubleshooting.md  usage.md
fixtures/: ap_sql_select.json  explain_sql_query.json  explain_sql_query_mathe.json  explain_sql_query_weather.json
fixtures/postgres-seed/: 01_mathe_pgsql.sql  02_setup_mathe_annotations.sql  03_setup_semiring_parallel.sql
provenance_demo/: di.py  main.py  semirings.py
provenance_demo/errors/: __init__.py  exceptions.py
provenance_demo/internal/: sql_rewriter.py
provenance_demo/repository/: provenance.py
provenance_demo/services/: provenance.py
provenance_demo/types/: semiring.py
scripts/: export_openapi.py
tests/: conftest.py  test_annotations.py  test_int_annotate.py  test_int_query.py  test_pg_json.py  test_provenance.py
tests/provenance/: test_provenance.py  test_whyprov_retrieval.py
tests/rewritter/: test_rewritter.py
v0.2.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.2.0/architecture/: index.html
v0.2.0/configuration/: index.html
v0.2.0/content/: openapi.json
v0.2.0/development/: index.html
v0.2.0/openapi/: index.html
v0.2.0/search/: search_index.json
v0.2.0/troubleshooting/: index.html
v0.2.0/usage/: index.html
v0.4.0/: 404.html  index.html  sitemap.xml
v0.4.0/architecture/: index.html
v0.4.0/configuration/: index.html
v0.4.0/content/: openapi.json
v0.4.0/development/: index.html
v0.4.0/openapi/: index.html
v0.4.0/search/: search_index.json
v0.4.0/usage/: index.html
(+34 files in other folders)
