[project]
name = "provenance-demo"
version = "0.0.1"
description = "Provenance Demo repository"
authors = [{ name = "Lucas Peirone", email = "lucas.peirone@univ-grenoble-alpes.fr" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.14,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.128.0",
    "psycopg[binary,pool]>=3.3",
    "pydantic>=2.12.5",
    "sqlglot>=28.6.0",
    "orjson>=3.10.0",
    "testcontainers[core,postgres,postgresql]>=4.14.0",
]

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "pre-commit>=2.20.0",
    "mkdocs-material>=8.5.10",
    "mkdocstrings[python]>=0.26.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools]
py-modules = ["provenance_demo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
